test/simple/ill-typed/tuple_left.caprice
(* TEST
  include refutable;
*)


let x : int * bool = true, true
